modules/nacl/main.tf
resource "aws_network_acl" "private_nacl" {
  vpc_id = var.vpc_id
  subnet_ids = var.private_subnet_ids
}

resource "aws_network_acl_rule" "allow_mysql_in" {
  network_acl_id = aws_network_acl.private_nacl.id
  rule_number    = 100
  egress         = false
  protocol       = "tcp"
  rule_action    = "allow"
  cidr_block     = var.vpc_cidr
  from_port      = 3306
  to_port        = 3306
}

resource "aws_network_acl_rule" "allow_ephemeral_out" {
  network_acl_id = aws_network_acl.private_nacl.id
  rule_number    = 200
  egress         = true
  protocol       = "tcp"
  rule_action    = "allow"
  cidr_block     = "0.0.0.0/0"
  from_port      = 1024
  to_port        = 65535
}
